carpet-cleaning.html

--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -27,6 +27,13 @@
 
   <style>
     :root { color-scheme: dark; }
+
+    /* FORCE DROPDOWN TEXT TO BE VISIBLE */
+    select,
+    select option {
+      color: #f9fafb;
+      background-color: #111827;
+    }
   </style>
 </head>
 
