--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -131,69 +131,76 @@
           Additional rooms, stairs, or pet-related issues will be quoted separately.
         </p>
 
+        <!-- SECURE FORM: POSTS TO WEB3FORMS HTTPS ENDPOINT -->
         <form
           class="mt-8 grid gap-4 sm:grid-cols-2"
-          action="mailto:john@indyturnoverpros.com"
-          method="post"
-          enctype="text/plain"
+          action="https://api.web3forms.com/submit"
+          method="POST"
         >
+          <!-- REQUIRED BY WEB3FORMS -->
+          <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c" />
+          <input type="hidden" name="subject" value="New Carpet Cleaning Request" />
+          <input type="hidden" name="from_name" value="Indy Turnover Pros Website" />
+          <!-- Optional: redirect after success -->
+          <!-- <input type="hidden" name="redirect" value="https://indyturnoverpros.com/thank-you.html" /> -->
+
           <!-- Basic Info -->
-          <input
-            required
-            name="name"
-            placeholder="First and last name"
-            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+          <input required name="name" placeholder="First and last name"
+            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
 
-          <input
-            required
-            type="email"
-            name="email"
-            placeholder="Your email"
-            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+          <input required type="email" name="email" placeholder="Your email"
+            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
 
-          <input
-            required
-            name="phone"
-            placeholder="Mobile phone (for confirmation text)"
-            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+          <input required name="phone" placeholder="Mobile phone (for confirmation text)"
+            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
 
-          <!-- Address -->
-          <input
-            required
-            name="address"
-            placeholder="Service address (street, unit #)"
-            class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+          <!-- ADDRESS LINE 1 -->
+          <input required name="address_street" placeholder="Street address"
+            class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
+
+          <!-- ADDRESS LINE 2 -->
+          <div class="sm:col-span-2 grid grid-cols-3 gap-4">
+
+            <input required name="address_city" placeholder="City"
+              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
+
+            <select required name="address_state" id="address_state"
+              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
+              <option value="" disabled selected>State</option>
+              <option value="IN">IN</option>
+              <option value="IL">IL</option>
+              <option value="KY">KY</option>
+              <option value="OH">OH</option>
+              <option value="MI">MI</option>
+            </select>
+
+            <input required name="address_zip" id="address_zip" placeholder="ZIP code"
+              inputmode="numeric" maxlength="5"
+              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
+
+          </div>
 
           <!-- Additional rooms YES/NO -->
           <div class="sm:col-span-2 space-y-1">
             <label class="text-sm text-white/70">
               Any additional rooms beyond the 3 included?
             </label>
-            <select
-              id="additional_rooms"
-              name="additional_rooms"
-              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-            >
+            <select id="additional_rooms" name="additional_rooms"
+              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
               <option value="" disabled selected>Select one</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
           </div>
 
-          <!-- Extra rooms follow-up (shown only if Yes) -->
+          <!-- Extra rooms follow-up -->
           <div id="extra-rooms-details" class="sm:col-span-2 space-y-4 hidden">
             <div class="space-y-1">
               <label class="text-sm text-white/70">
                 How many additional rooms?
               </label>
-              <select
-                name="extra_rooms_count"
-                class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-              >
+              <select name="extra_rooms_count"
+                class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
                 <option value="" disabled selected>Select one</option>
                 <option value="1 extra room">1 extra room</option>
                 <option value="2 extra rooms">2 extra rooms</option>
@@ -206,24 +213,17 @@
               <label class="text-sm text-white/70">
                 Approximate square footage of additional rooms
               </label>
-              <textarea
-                name="extra_rooms_sqft"
-                rows="3"
+              <textarea name="extra_rooms_sqft" rows="3"
                 placeholder="Example: Bedroom ~120 sq ft; office ~150 sq ft; basement ~300 sq ft."
-                class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-              ></textarea>
+                class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"></textarea>
             </div>
           </div>
 
           <!-- Stairs YES/NO -->
           <div class="sm:col-span-2 space-y-1">
-            <label class="text-sm text-white/70">
-              Stairs to be cleaned?
-            </label>
-            <select
-              name="stairs"
-              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-            >
+            <label class="text-sm text-white/70">Stairs to be cleaned?</label>
+            <select name="stairs"
+              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
               <option value="" disabled selected>Select one</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
@@ -232,64 +232,39 @@
 
           <!-- Pet stains YES/NO -->
           <div class="sm:col-span-2 space-y-1">
-            <label class="text-sm text-white/70">
-              Pet stains or odor issues?
-            </label>
-            <select
-              name="pet_stains"
-              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-            >
+            <label class="text-sm text-white/70">Pet stains or odor issues?</label>
+            <select name="pet_stains"
+              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
               <option value="" disabled selected>Select one</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
           </div>
 
-          <!-- Preferred Dates -->
+          <!-- Preferred service dates -->
           <div class="sm:col-span-2 space-y-1">
-            <label class="text-sm text-white/70">
-              Preferred service date #1 (first choice)
-            </label>
-            <input
-              required
-              type="date"
-              name="preferred_date_1"
-              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-            />
+            <label class="text-sm text-white/70">Preferred service date #1 (required)</label>
+            <input required type="date" name="preferred_date_1" id="preferred_date_1"
+              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
           </div>
 
           <div class="sm:col-span-2 space-y-1">
-            <label class="text-sm text-white/70">
-              Preferred service date #2 (optional)
-            </label>
-            <input
-              type="date"
-              name="preferred_date_2"
-              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-            />
+            <label class="text-sm text-white/70">Preferred service date #2 (optional)</label>
+            <input type="date" name="preferred_date_2" id="preferred_date_2"
+              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
           </div>
 
           <div class="sm:col-span-2 space-y-1">
-            <label class="text-sm text-white/70">
-              Preferred service date #3 (optional)
-            </label>
-            <input
-              type="date"
-              name="preferred_date_3"
-              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-            />
+            <label class="text-sm text-white/70">Preferred service date #3 (optional)</label>
+            <input type="date" name="preferred_date_3" id="preferred_date_3"
+              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
           </div>
 
-          <!-- Preferred Time Window -->
+          <!-- Preferred time -->
           <div class="sm:col-span-2 space-y-1">
-            <label class="text-sm text-white/70">
-              Preferred time window
-            </label>
-            <select
-              required
-              name="preferred_time"
-              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-            >
+            <label class="text-sm text-white/70">Preferred time window</label>
+            <select required name="preferred_time"
+              class="w-full rounded-2xl border border-white/10 bg-white/5 px-4 py-3">
               <option value="" disabled selected>Select one</option>
               <option value="Morning (8 AM – 12 PM)">Morning (8 AM – 12 PM)</option>
               <option value="Afternoon (12 PM – 4 PM)">Afternoon (12 PM – 4 PM)</option>
@@ -298,17 +273,12 @@
           </div>
 
           <!-- Notes -->
-          <textarea
-            name="notes"
-            rows="4"
+          <textarea name="notes" rows="4"
             placeholder="Anything else we should know? (Parking, large furniture, heavy staining, pets, etc.)"
-            class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          ></textarea>
+            class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"></textarea>
 
-          <button
-            type="submit"
-            class="sm:col-span-2 rounded-2xl bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400"
-          >
+          <button type="submit"
+            class="sm:col-span-2 rounded-2xl bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400">
             Submit My $159 Cleaning Request
           </button>
         </form>
@@ -339,28 +309,66 @@
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
 
-    // Show/hide extra rooms follow-up based on YES/NO selection
     document.addEventListener('DOMContentLoaded', function () {
+      // Show/hide extra rooms follow-up
       const additionalRoomsSelect = document.getElementById('additional_rooms');
       const extraRoomsDetails = document.getElementById('extra-rooms-details');
 
-      if (!additionalRoomsSelect || !extraRoomsDetails) return;
-
-      function toggleExtraRooms() {
-        if (additionalRoomsSelect.value === 'Yes') {
-          extraRoomsDetails.classList.remove('hidden');
-        } else {
-          extraRoomsDetails.classList.add('hidden');
+      if (additionalRoomsSelect && extraRoomsDetails) {
+        function toggleExtraRooms() {
+          if (additionalRoomsSelect.value === 'Yes') {
+            extraRoomsDetails.classList.remove('hidden');
+          } else {
+            extraRoomsDetails.classList.add('hidden');
+          }
         }
+        additionalRoomsSelect.addEventListener('change', toggleExtraRooms);
+        toggleExtraRooms();
       }
 
-      additionalRoomsSelect.addEventListener('change', toggleExtraRooms);
-      toggleExtraRooms();
+      // Block past dates for preferred dates
+      const today = new Date();
+      const yyyy = today.getFullYear();
+      const mm = String(today.getMonth() + 1).padStart(2, '0');
+      const dd = String(today.getDate()).padStart(2, '0');
+      const todayStr = `${yyyy}-${mm}-${dd}`;
+
+      ['preferred_date_1', 'preferred_date_2', 'preferred_date_3'].forEach(id => {
+        const el = document.getElementById(id);
+        if (el) el.setAttribute('min', todayStr);
+      });
+
+      // ZIP auto-format + auto-detect state
+      const zipInput = document.getElementById('address_zip');
+      const stateSelect = document.getElementById('address_state');
+
+      if (zipInput) {
+        zipInput.addEventListener('input', function () {
+          // keep only digits, max 5
+          this.value = this.value.replace(/\D/g, '').slice(0, 5);
+
+          if (this.value.length === 5 && stateSelect && !stateSelect.value) {
+            const zip = parseInt(this.value, 10);
+            let state = '';
+
+            if (zip >= 46000 && zip <= 47999) state = 'IN';
+            else if (zip >= 60000 && zip <= 62999) state = 'IL';
+            else if (zip >= 40000 && zip <= 42799) state = 'KY';
+            else if (zip >= 43000 && zip <= 45999) state = 'OH';
+            else if (zip >= 48000 && zip <= 49999) state = 'MI';
+
+            if (state) {
+              stateSelect.value = state;
+            }
+          }
+        });
+      }
     });
   </script>
 
 </body>
 </html>
+
 
 
 
