carpet-cleaning.html

--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Carpet Cleaning — Indy Turnover Pros</title>
-  <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special for up to 600 sq ft. Request a quote or check availability in seconds." />
+  <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special for up to 600 sq ft. Lock in the special or request a custom quote." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,10 +88,10 @@
       <div class="lg:justify-self-end w-full max-w-md">
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
           <h2 class="text-xl font-bold">
-            Request a Quote or Check Availability
+            Lock In the $159 Special or Request a Custom Quote
           </h2>
           <p class="mt-2 text-sm text-white/70">
-            Short form. No obligation. We’ll respond by email or text, usually the same day.
+            Short form. No obligation. We’ll follow up to confirm schedule and pricing by email or text.
           </p>
 
           <!-- SECURE FORM: POSTS VIA HTTPS TO WEB3FORMS -->
@@ -102,9 +102,9 @@
           >
             <!-- REQUIRED BY WEB3FORMS (KEEPING YOUR EXISTING ACCESS KEY) -->
             <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c" />
-            <input type="hidden" name="subject" value="New Carpet Cleaning Inquiry" />
+            <input type="hidden" name="subject" value="Carpet Cleaning - $159 Special / Custom Quote" />
             <input type="hidden" name="from_name" value="Indy Turnover Pros Website" />
-            <input type="hidden" name="service" value="Carpet Cleaning - $159 Special" />
+            <input type="hidden" name="service" value="Carpet Cleaning" />
 
             <div>
               <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
@@ -135,6 +135,33 @@
 
             <div>
               <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
+                I’m interested in
+              </label>
+              <div class="space-y-2 text-sm">
+                <label class="flex items-center gap-2">
+                  <input
+                    type="radio"
+                    name="interest_type"
+                    value="$159 three-room special"
+                    class="h-4 w-4 rounded border-white/30 bg-white/10"
+                    checked
+                  />
+                  <span>$159 three-room special (up to 3 rooms / 600 sq ft)</span>
+                </label>
+                <label class="flex items-center gap-2">
+                  <input
+                    type="radio"
+                    name="interest_type"
+                    value="Custom quote"
+                    class="h-4 w-4 rounded border-white/30 bg-white/10"
+                  />
+                  <span>Custom quote (whole house, larger job, or heavy pet issues)</span>
+                </label>
+              </div>
+            </div>
+
+            <div>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
                 What do you need cleaned?
               </label>
               <textarea
@@ -150,7 +177,7 @@
               type="submit"
               class="w-full rounded-2xl bg-brand-500 px-6 py-3 text-sm font-semibold hover:bg-brand-400 transition-colors"
             >
-              Request My Quote &amp; Check Availability
+              Check Availability for My $159 Cleaning / Custom Quote
             </button>
 
             <p class="mt-2 text-[11px] text-white/50">
