carpet-cleaning.html

--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Carpet Cleaning — Indy Turnover Pros</title>
-  <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special for up to 600 sq ft. Lock in the special or request a custom quote." />
+  <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special (includes 3 rooms, max 600 sq ft). Lock in the special or request a custom quote." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,7 +66,7 @@
         </p>
 
         <ul class="mt-6 space-y-2 text-sm text-white/70">
-          <li>• Special includes up to <strong>3 rooms</strong> and up to <strong>600 sq ft</strong>.</li>
+          <li>• Special includes <strong>3 rooms</strong> (max <strong>600 sq ft</strong> total).</li>
           <li>• Fresh-scent deodorizer included at no extra charge.</li>
           <li>• Serving Carmel & surrounding north-Indy neighborhoods.</li>
         </ul>
@@ -94,13 +94,12 @@
             Short form. No obligation. We’ll follow up to confirm schedule and pricing by email or text.
           </p>
 
-          <!-- SECURE FORM: POSTS VIA HTTPS TO WEB3FORMS -->
+          <!-- SECURE FORM -->
           <form
             class="mt-6 space-y-4"
             action="https://api.web3forms.com/submit"
             method="POST"
           >
-            <!-- REQUIRED BY WEB3FORMS (KEEPING YOUR EXISTING ACCESS KEY) -->
             <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c" />
             <input type="hidden" name="subject" value="Carpet Cleaning - $159 Special / Custom Quote" />
             <input type="hidden" name="from_name" value="Indy Turnover Pros Website" />
@@ -146,7 +145,7 @@
                     class="h-4 w-4 rounded border-white/30 bg-white/10"
                     checked
                   />
-                  <span>$159 three-room special (up to 3 rooms / 600 sq ft)</span>
+                  <span>$159 three-room special (includes 3 rooms, max 600 sq ft)</span>
                 </label>
                 <label class="flex items-center gap-2">
                   <input
@@ -189,7 +188,7 @@
     </div>
   </section>
 
-  <!-- WHAT WE CLEAN / SERVICE CARDS -->
+  <!-- WHAT WE CLEAN -->
   <section class="py-16 lg:py-20 border-t border-white/5" id="services">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <h2 class="text-3xl sm:text-4xl font-extrabold">Carpet Cleaning Services</h2>
@@ -241,6 +240,7 @@
 
 </body>
 </html>
+
 
 
 
