--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carpet Cleaning — Indy Turnover Pros</title>
+  <title><link rel="icon" type="image/png" href="favicon.png">
+Carpet Cleaning — Indy Turnover Pros</title>
   <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special (includes 3 rooms, max 600 sq ft). Lock in the special or request a custom quote." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
