--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><link rel="icon" type="image/png" href="favicon.png">
+  <title><link rel="icon" type="image/png" href="favicon.ico">
 Carpet Cleaning — Indy Turnover Pros</title>
   <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special (includes 3 rooms, max 600 sq ft). Lock in the special or request a custom quote." />
 
