--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -9,12 +9,11 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-  <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special. Deep extraction, fast scheduling, and dependable results." />
+  <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special (includes 3 rooms, max 600 sq ft). Lock in the special or request a custom quote." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
   <script src="https://cdn.tailwindcss.com"></script>
 
   <script>
@@ -33,12 +32,6 @@
 
   <style>
     :root { color-scheme: dark; }
-
-    select,
-    select option {
-      color: #f9fafb;
-      background-color: #111827;
-    }
   </style>
 </head>
 
@@ -60,29 +53,150 @@
     </div>
   </header>
 
-  <!-- HERO -->
-  <section class="py-20 lg:py-28">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-2 gap-12 items-center">
+  <!-- HERO + SHORT FORM (ABOVE THE FOLD) -->
+  <section class="py-14 lg:py-20">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-2 gap-12 items-start">
+      <!-- COPY / TRUST -->
       <div>
-        <h1 class="text-5xl font-black leading-tight tracking-tight">
-          Professional <span class="text-brand-400">Carpet Cleaning</span>
-          for Homes & Rentals
-        </h1>
-        <p class="mt-6 text-white/70 text-lg max-w-xl">
-          Deep extraction cleaning for traffic lanes, bedrooms, stairs, and move-in / move-out units.
-          Fast scheduling, clear pricing, and dependable results every time.
+        <p class="text-sm font-semibold uppercase tracking-[0.2em] text-brand-400">
+          $159 Three-Room Special
         </p>
+        <h1 class="mt-3 text-4xl sm:text-5xl font-black leading-tight tracking-tight">
+          Professional <span class="text-brand-400">Carpet Cleaning</span> for Homes & Rentals
+        </h1>
+
+        <p class="mt-5 text-white/70 text-lg max-w-xl">
+          Deep extraction cleaning for traffic lanes, bedrooms, stairs, and move-in / move-out units.
+          Locally owned, clear pricing, and dependable results every time.
+        </p>
+
+        <ul class="mt-6 space-y-2 text-sm text-white/70">
+          <li>• Special includes <strong>3 rooms</strong> (max <strong>600 sq ft</strong> total).</li>
+          <li>• Fresh-scent deodorizer included at no extra charge.</li>
+          <li>• Serving Carmel & surrounding north-Indy neighborhoods.</li>
+        </ul>
+
+        <p class="mt-5 text-sm text-white/60">
+          <span class="font-semibold text-white">Satisfaction guarantee:</span>
+          if a treated area doesn’t improve, you don’t pay for that area.
+        </p>
+
+        <div class="mt-6 text-sm text-white/60">
+          <p class="font-semibold text-white">John — Owner / Admin</p>
+          <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">
+            john@indyturnoverpros.com
+          </a>
+        </div>
       </div>
-      <div>
-        <img src="logo.png" alt="Carpet Cleaning" class="mx-auto w-full max-w-md opacity-90" />
+
+      <!-- MICRO-COMMITMENT FORM -->
+      <div class="lg:justify-self-end w-full max-w-md">
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
+          <h2 class="text-xl font-bold">
+            Lock In the $159 Special or Request a Custom Quote
+          </h2>
+          <p class="mt-2 text-sm text-white/70">
+            Short form. No obligation. We’ll follow up to confirm schedule and pricing by email or text.
+          </p>
+
+          <!-- SECURE FORM: POSTS VIA HTTPS TO WEB3FORMS -->
+          <form
+            class="mt-6 space-y-4"
+            action="https://api.web3forms.com/submit"
+            method="POST"
+          >
+            <!-- REQUIRED BY WEB3FORMS -->
+            <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c" />
+            <input type="hidden" name="subject" value="Carpet Cleaning - $159 Special / Custom Quote" />
+            <input type="hidden" name="from_name" value="Indy Turnover Pros Website" />
+            <input type="hidden" name="service" value="Carpet Cleaning" />
+
+            <div>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
+                Name
+              </label>
+              <input
+                required
+                name="name"
+                placeholder="First and last name"
+                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"
+              />
+            </div>
+
+            <div>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
+                Best way to reach you
+              </label>
+              <input
+                required
+                name="contact"
+                placeholder="Email or mobile number"
+                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"
+              />
+              <p class="mt-1 text-xs text-white/50">
+                We’ll only use this to follow up about your cleaning.
+              </p>
+            </div>
+
+            <div>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
+                I’m interested in
+              </label>
+              <div class="space-y-2 text-sm">
+                <label class="flex items-center gap-2">
+                  <input
+                    type="radio"
+                    name="interest_type"
+                    value="$159 three-room special"
+                    class="h-4 w-4 rounded border-white/30 bg-white/10"
+                    checked
+                  />
+                  <span>$159 three-room special (includes 3 rooms, max 600 sq ft)</span>
+                </label>
+                <label class="flex items-center gap-2">
+                  <input
+                    type="radio"
+                    name="interest_type"
+                    value="Custom quote"
+                    class="h-4 w-4 rounded border-white/30 bg-white/10"
+                  />
+                  <span>Custom quote (whole house, larger job, or heavy pet issues)</span>
+                </label>
+              </div>
+            </div>
+
+            <div>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
+                What do you need cleaned?
+              </label>
+              <textarea
+                required
+                name="details"
+                rows="3"
+                placeholder="Example: living room + 2 bedrooms, hallway, and 12 stairs. Light pet stains in one room."
+                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"
+              ></textarea>
+            </div>
+
+            <button
+              type="submit"
+              class="w-full rounded-2xl bg-brand-500 px-6 py-3 text-sm font-semibold hover:bg-brand-400 transition-colors"
+            >
+              Check Availability for My $159 Cleaning / Custom Quote
+            </button>
+
+            <p class="mt-2 text-[11px] text-white/50">
+              By submitting, you agree to be contacted by Indy Turnover Pros about carpet cleaning services.
+            </p>
+          </form>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- WHAT WE CLEAN -->
-  <section class="py-20 lg:py-28" id="services">
+  <!-- WHAT WE CLEAN / SERVICE CARDS -->
+  <section class="py-16 lg:py-20 border-t border-white/5" id="services">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
-
       <h2 class="text-3xl sm:text-4xl font-extrabold">Carpet Cleaning Services</h2>
       <p class="mt-3 text-white/70 max-w-xl">
         Built for homeowners, landlords, and property managers needing fast, reliable carpet cleaning.
@@ -93,85 +207,32 @@
           <div class="text-lg font-semibold">Traffic Lane Restoration</div>
           <p class="mt-2 text-white/70">Hot water extraction for heavy foot traffic areas.</p>
         </div>
+
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Bedrooms & Living Areas</div>
+          <div class="text-lg font-semibold">Bedrooms &amp; Living Areas</div>
           <p class="mt-2 text-white/70">Full-room extraction for fresh, clean carpets.</p>
         </div>
+
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
           <div class="text-lg font-semibold">Stair Cleaning</div>
-          <p class="mt-2 text-white/70">Each stair tread & riser cleaned thoroughly.</p>
+          <p class="mt-2 text-white/70">Each stair tread &amp; riser cleaned thoroughly.</p>
         </div>
+
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Hallways & Transitions</div>
+          <div class="text-lg font-semibold">Hallways &amp; Transitions</div>
           <p class="mt-2 text-white/70">High-traffic connectors cleaned end-to-end.</p>
         </div>
+
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Edge & Baseboard Detailing</div>
+          <div class="text-lg font-semibold">Edge &amp; Baseboard Detailing</div>
           <p class="mt-2 text-white/70">Crevice cleaning along walls and edges.</p>
         </div>
+
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
           <div class="text-lg font-semibold">Spot Treatment</div>
-          <p class="mt-2 text-white/70">Targeted stain removal & deodorizing.</p>
+          <p class="mt-2 text-white/70">Targeted stain removal &amp; deodorizing.</p>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!-- CONTACT / FORM -->
-  <section id="contact" class="py-20 lg:py-28">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-3 gap-10">
-
-      <div class="lg:col-span-2">
-        <h2 class="text-3xl font-extrabold">Lock in the $159 Special or Request a Custom Quote</h2>
-        <p class="mt-3 text-white/70 max-w-xl">
-          Short form. No obligation. We'll follow up to confirm schedule and pricing by email or text.
-        </p>
-
-        <!-- SECURE FORM: POSTS TO WEB3FORMS -->
-        <form class="mt-8 grid gap-4 sm:grid-cols-2" action="https://api.web3forms.com/submit" method="POST">
-
-          <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c" />
-          <input type="hidden" name="subject" value="New Carpet Cleaning Request" />
-          <input type="hidden" name="from_name" value="Indy Turnover Pros Website" />
-
-          <input required name="name" placeholder="First and last name" class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
-          <input required name="contact" placeholder="Email or mobile number" class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
-
-          <!-- CHOOSE SPECIAL OR CUSTOM -->
-          <div class="sm:col-span-2 text-sm text-white/70">I'm interested in</div>
-
-          <div class="sm:col-span-2 space-y-3">
-            <label class="flex items-center gap-3">
-              <input type="radio" name="service_type" value="$159 special (3 rooms or 600 sq ft)" required />
-              <span>$159 three-room special (3 rooms OR 600 sq ft)</span>
-            </label>
-
-            <label class="flex items-center gap-3">
-              <input type="radio" name="service_type" value="Custom quote" />
-              <span>Custom quote (whole house, large job, heavy pet issues)</span>
-            </label>
-          </div>
-
-          <textarea name="details" rows="4" placeholder="What do you need cleaned? Example: living room + 2 bedrooms, hallway, 12 stairs, light pet stains in one room." class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"></textarea>
-
-          <button type="submit" class="sm:col-span-2 rounded-2xl bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400">
-            Submit Request
-          </button>
-        </form>
-      </div>
-
-      <div>
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6">
-          <div class="text-lg font-bold">Contact</div>
-          <div class="mt-4 space-y-4 text-sm">
-            <div>
-              <div class="font-semibold">John — Owner / Admin</div>
-              <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">john@indyturnoverpros.com</a>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
   </section>
 
@@ -185,7 +246,6 @@
 
 </body>
 </html>
-
 
 
 
