--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         <span class="text-xl font-extrabold tracking-tight">Indy Turnover Pros</span>
       </a>
       <nav class="hidden md:flex items-center gap-8 text-sm">
-  <a href="#services">Services</a>
-  <a href="carpet-cleaning.html">Carpet Cleaning</a>
-  <a href="#contact">Contact</a>
-</nav>
+        <a href="#services">Services</a>
+        <a href="standard-cleaning.html">Standard Cleaning</a>
+        <a href="carpet-cleaning.html">Carpet Cleaning</a>
+        <a href="#contact">Contact</a>
+      </nav>
 
     </div>
   </header>
@@ -152,6 +153,25 @@
         </div>
 
       </div> <!-- END SECOND GRID -->
+
+      <!-- THIRD GRID → Standard Cleaning (Added) -->
+      <div class="mt-6 grid gap-6 sm:grid-cols-2 lg:grid-cols-2">
+
+        <!-- Standard Cleaning (Added) -->
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
+          <div class="text-lg font-semibold">Standard Cleaning</div>
+          <p class="mt-2 text-white/70">
+            A straightforward, recurring clean for occupied homes or rentals—simple, consistent, and reliable.
+          </p>
+          <ul class="mt-4 space-y-1 text-sm text-white/60 list-disc list-inside">
+            <li><span class="font-semibold">Kitchen:</span> counters, sink, exterior appliance wipe-down, microwave exterior, cabinet faces (exterior)</li>
+            <li><span class="font-semibold">Bathrooms:</span> toilets, sinks, mirrors, showers/tubs (standard scrub), floors</li>
+            <li><span class="font-semibold">Living Areas:</span> vacuum, mop, surfaces dusted, light baseboard/blinds dusting</li>
+            <li><span class="font-semibold">Finishing:</span> trash gathered (as scoped) + quick final reset</li>
+          </ul>
+        </div>
+
+      </div> <!-- END THIRD GRID -->
 
     </div>
   </section>
