standard-cleaning.html

--- a/standard-cleaning.html
+++ b/standard-cleaning.html
@@ -104,7 +104,7 @@
       </p>
 
       <div class="mt-6 text-sm text-white/60">
-        <p class="font-semibold text-white">Enri — Owner / Admin</p>
+        <p class="font-semibold text-white">John — Owner / Admin</p>
         <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">
           john@indyturnoverpros.com
         </a>
