carpet-cleaning.html

--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -3,13 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carpet Cleaning — Indy Turnover Pros</title>
+  <title>Standard House Cleaning — Plainfield, IN</title>
 
-  <!-- Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
-  <meta name="description" content="Professional carpet cleaning in Indianapolis. $159 three-room special (includes 3 rooms, max 600 sq ft). Lock in the special or request a custom quote." />
+  <meta name="description" content="Local standard house cleaning in Plainfield, Indiana. No contracts, straightforward pricing, and flexible scheduling. Request a free consultation and estimate." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,207 +26,118 @@
     }
   </script>
 
-  <style>
-    :root { color-scheme: dark; }
-  </style>
+  <style>:root { color-scheme: dark; }</style>
 </head>
 
 <body class="bg-night text-white font-sans antialiased">
 
-  <!-- NAVBAR -->
+  <!-- NAV -->
   <header class="sticky top-0 bg-night/80 border-b border-white/10 z-40">
     <div class="mx-auto max-w-7xl px-6 lg:px-8 flex justify-between py-4">
       <a href="index.html" class="flex items-center gap-3">
         <img src="logo.png" alt="Indy Turnover Pros Logo" class="h-9 w-auto" />
         <span class="text-xl font-extrabold tracking-tight">Indy Turnover Pros</span>
       </a>
-
       <nav class="hidden md:flex items-center gap-8 text-sm">
         <a href="index.html#services">Services</a>
-        <a href="carpet-cleaning.html" class="text-brand-400 font-semibold">Carpet Cleaning</a>
+        <span class="text-brand-400 font-semibold">House Cleaning</span>
         <a href="index.html#contact">Contact</a>
       </nav>
     </div>
   </header>
 
-  <!-- HERO + SHORT FORM (ABOVE THE FOLD) -->
+  <!-- HERO -->
   <section class="py-14 lg:py-20">
     <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-2 gap-12 items-start">
-      <!-- COPY / TRUST -->
+
+      <!-- COPY -->
       <div>
-        <p class="text-sm font-semibold uppercase tracking-[0.2em] text-brand-400">
-          $159 Three-Room Special
-        </p>
-        <h1 class="mt-3 text-4xl sm:text-5xl font-black leading-tight tracking-tight">
-          Professional <span class="text-brand-400">Carpet Cleaning</span> for Homes & Rentals
+        <h1 class="text-4xl sm:text-5xl font-black leading-tight tracking-tight">
+          Standard <span class="text-brand-400">House Cleaning</span> in Plainfield
         </h1>
 
         <p class="mt-5 text-white/70 text-lg max-w-xl">
-          Deep extraction cleaning for traffic lanes, bedrooms, stairs, and move-in / move-out units.
-          Locally owned, clear pricing, and dependable results every time.
+          For busy households who want a clean home without the hassle. No long-term contracts, no upsells, and straightforward pricing.
         </p>
 
         <ul class="mt-6 space-y-2 text-sm text-white/70">
-          <li>• Special includes <strong>3 rooms</strong> (max <strong>600 sq ft</strong> total).</li>
-          <li>• Fresh-scent deodorizer included at no extra charge.</li>
-          <li>• Serving Carmel & surrounding north-Indy neighborhoods.</li>
+          <li>• Weekly, biweekly, or monthly visits</li>
+          <li>• Reliable scheduling</li>
+          <li>• Local & insured</li>
+          <li>• Straightforward pricing</li>
+          <li>• Flexible & easy to work with</li>
         </ul>
 
         <p class="mt-5 text-sm text-white/60">
-          <span class="font-semibold text-white">Satisfaction guarantee:</span>
-          if a treated area doesn’t improve, you don’t pay for that area.
+          Serving Plainfield and surrounding neighborhoods.
         </p>
 
         <div class="mt-6 text-sm text-white/60">
-          <p class="font-semibold text-white">John — Owner / Admin</p>
-          <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">
-            john@indyturnoverpros.com
-          </a>
+          <p class="font-semibold text-white">John — Owner</p>
+          <p>Call/Text: (317) 406-9842</p>
+          <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">john@indyturnoverpros.com</a>
         </div>
       </div>
 
-      <!-- MICRO-COMMITMENT FORM -->
+      <!-- FORM -->
       <div class="lg:justify-self-end w-full max-w-md">
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
           <h2 class="text-xl font-bold">
-            Lock In the $159 Special or Request a Custom Quote
+            Free Consultation + Estimate
           </h2>
           <p class="mt-2 text-sm text-white/70">
-            Short form. No obligation. We’ll follow up to confirm schedule and pricing by email or text.
+            Short form. No obligations. We’ll follow up by email or text with scheduling and pricing.
           </p>
 
-          <!-- SECURE FORM: POSTS VIA HTTPS TO WEB3FORMS -->
           <form
             class="mt-6 space-y-4"
             action="https://api.web3forms.com/submit"
             method="POST"
           >
-            <!-- REQUIRED BY WEB3FORMS -->
             <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c" />
-            <input type="hidden" name="subject" value="Carpet Cleaning - $159 Special / Custom Quote" />
+            <input type="hidden" name="subject" value="Standard House Cleaning Consultation Request" />
             <input type="hidden" name="from_name" value="Indy Turnover Pros Website" />
-            <input type="hidden" name="service" value="Carpet Cleaning" />
+            <input type="hidden" name="service" value="Standard House Cleaning" />
 
             <div>
-              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
-                Name
-              </label>
-              <input
-                required
-                name="name"
-                placeholder="First and last name"
-                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"
-              />
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">Name</label>
+              <input required name="name" placeholder="First and last name"
+                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"/>
             </div>
 
             <div>
-              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
-                Best way to reach you
-              </label>
-              <input
-                required
-                name="contact"
-                placeholder="Email or mobile number"
-                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"
-              />
-              <p class="mt-1 text-xs text-white/50">
-                We’ll only use this to follow up about your cleaning.
-              </p>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">Best way to reach you</label>
+              <input required name="contact" placeholder="Email or mobile number"
+                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"/>
             </div>
 
             <div>
-              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
-                I’m interested in
-              </label>
-              <div class="space-y-2 text-sm">
-                <label class="flex items-center gap-2">
-                  <input
-                    type="radio"
-                    name="interest_type"
-                    value="$159 three-room special"
-                    class="h-4 w-4 rounded border-white/30 bg-white/10"
-                    checked
-                  />
-                  <span>$159 three-room special (includes 3 rooms, max 600 sq ft)</span>
-                </label>
-                <label class="flex items-center gap-2">
-                  <input
-                    type="radio"
-                    name="interest_type"
-                    value="Custom quote"
-                    class="h-4 w-4 rounded border-white/30 bg-white/10"
-                  />
-                  <span>Custom quote (whole house, larger job, or heavy pet issues)</span>
-                </label>
-              </div>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">How often?</label>
+              <select name="frequency" required
+                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400">
+                <option value="Weekly">Weekly</option>
+                <option value="Biweekly">Biweekly</option>
+                <option value="Monthly">Monthly</option>
+                <option value="One-time clean">One-time clean</option>
+                <option value="Unsure">Unsure</option>
+              </select>
             </div>
 
             <div>
-              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">
-                What do you need cleaned?
-              </label>
-              <textarea
-                required
-                name="details"
-                rows="3"
-                placeholder="Example: living room + 2 bedrooms, hallway, and 12 stairs. Light pet stains in one room."
-                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"
-              ></textarea>
+              <label class="block text-xs font-semibold uppercase tracking-wide text-white/60 mb-1">Tell us about your home</label>
+              <textarea required name="details" rows="3" placeholder="Example: 3 bed, 2.5 bath. Main living areas + kitchen + bathrooms."
+                class="w-full rounded-2xl border border-white/10 bg-white/10 px-4 py-3 text-sm outline-none focus:border-brand-400 focus:ring-1 focus:ring-brand-400"></textarea>
             </div>
 
-            <button
-              type="submit"
-              class="w-full rounded-2xl bg-brand-500 px-6 py-3 text-sm font-semibold hover:bg-brand-400 transition-colors"
-            >
-              Check Availability for My $159 Cleaning / Custom Quote
+            <button type="submit"
+              class="w-full rounded-2xl bg-brand-500 px-6 py-3 text-sm font-semibold hover:bg-brand-400 transition-colors">
+              Request My Free Consultation & Estimate
             </button>
 
             <p class="mt-2 text-[11px] text-white/50">
-              By submitting, you agree to be contacted by Indy Turnover Pros about carpet cleaning services.
+              By submitting, you agree to be contacted about house cleaning services.
             </p>
           </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- WHAT WE CLEAN / SERVICE CARDS -->
-  <section class="py-16 lg:py-20 border-t border-white/5" id="services">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-      <h2 class="text-3xl sm:text-4xl font-extrabold">Carpet Cleaning Services</h2>
-      <p class="mt-3 text-white/70 max-w-xl">
-        Built for homeowners, landlords, and property managers needing fast, reliable carpet cleaning.
-      </p>
-
-      <div class="mt-10 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Traffic Lane Restoration</div>
-          <p class="mt-2 text-white/70">Hot water extraction for heavy foot traffic areas.</p>
-        </div>
-
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Bedrooms &amp; Living Areas</div>
-          <p class="mt-2 text-white/70">Full-room extraction for fresh, clean carpets.</p>
-        </div>
-
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Stair Cleaning</div>
-          <p class="mt-2 text-white/70">Each stair tread &amp; riser cleaned thoroughly.</p>
-        </div>
-
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Hallways &amp; Transitions</div>
-          <p class="mt-2 text-white/70">High-traffic connectors cleaned end-to-end.</p>
-        </div>
-
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Edge &amp; Baseboard Detailing</div>
-          <p class="mt-2 text-white/70">Crevice cleaning along walls and edges.</p>
-        </div>
-
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
-          <div class="text-lg font-semibold">Spot Treatment</div>
-          <p class="mt-2 text-white/70">Targeted stain removal &amp; deodorizing.</p>
         </div>
       </div>
     </div>
@@ -240,16 +147,7 @@
     © <span id="y"></span> Indy Turnover Pros
   </footer>
 
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-  </script>
+  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
 
 </body>
 </html>
-
-
-
-
-
-
-
